Add integration tests

--- a/contracts/base-car/Cargo.toml
+++ b/contracts/base-car/Cargo.toml
@@ -48,5 +48,10 @@ cw2 = "1.0.1"
 schemars = "0.8.10"
 serde = { version = "1.0.145", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
+
+
 [dev-dependencies]
 cw-multi-test = "0.16.2"
+car-1 = {path = "../car-1"}
+car-2 = {path = "../car-2"}
+car-3 = {path = "../car-3"}
